--- a/styles/pages/project-detail.css
+++ b/styles/pages/project-detail.css
@@ -158,6 +158,7 @@
  */
 .project-content {
   width: 100%;
+  overflow: visible;
 }
 
 /* ============================================
